# gc-cloud-storage-bucket

./: .pre-commit-config.yaml  README.md  cookiecutter.json  project.cue  pyproject.toml  readme.md
.github/workflows/: test.yml
hooks/: pre_gen_project.py
terraform/: README.md  accounts.tf  provider.tf  storage.tf  tags.tf  variables.tf
terraform/operations/: README.md  backend.tf  variables.tf  versions.tf
terraform/state-management/: README.md  variables.tf  versions.tf
tests/data/: gcp-mock-credentials.json
utilities/data-provider/: README.md  gsutil_sync.bat
utilities/data-receiver/: README.md
{{ cookiecutter.project_name }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_name }}/terraform/: README.md  terraform.tfvars
{{ cookiecutter.project_name }}/terraform/operations/: README.md  accounts.tf  terraform.tfvars  variables.tf
{{ cookiecutter.project_name }}/terraform/state-management/: README.md  terraform.tfvars  variables.tf  versions.tf
{{ cookiecutter.project_name }}/utilities/data-provider/: README.md  gsutil_sync.bat
{{ cookiecutter.project_name }}/utilities/data-receiver/: README.md
