[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author }}"]
license = "{{ cookiecutter.project_license }}"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.0.0"
cookiecutter = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
